# unitree-go2-ros2

champ/champ_base/config/ekf/: base_to_footprint.yaml  footprint_to_odom.yaml
champ/champ_bringup/launch/: bringup.launch.py
champ/champ_description/rviz/: navigation_viewer.rviz
robots/configs/go2_config/: CMakeLists.txt
robots/configs/go2_config/config/autonomy/: custom_cartographer_2d.lua  mapper_params_online_async.yaml
robots/configs/go2_config/config/navigation/: cartographer_localization_only.lua  global_planner_params.yaml  local_planner_params.yaml  nav2_params.yaml  navigate_w_replanning_and_recovery.xml  navigate_without_spin.xml
robots/configs/go2_config/launch/: gazebo_velodyne.launch.py  localization_isolated.launch.py  mapping.launch.py  mapping_isolated.launch.py  nav_custom.launch.py  nav_custom2.launch.py  nav_test.launch.py  nav_test2.launch.py  navigation.launch.py  quadruped_controller_isolated.launch.py  robotperf_localization.launch.py  robotperf_perception.launch.py  robotperf_quadruped_control.launch.py
robots/configs/go2_config/maps_manual/square_map/: map_server.yaml  square_map.pgm  square_map.yaml
robots/configs/go2_config/rviz/: navigation.rviz
robots/configs/go2_config/rviz2/: navigation.rviz
robots/configs/go2_config/scripts/: sim_clock.py  twist2twiststamped.py
robots/configs/go2_config/worlds/: square.world
